--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" />
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -63,19 +64,21 @@
                 <div class="input-group f-class">
                 <div>
                     <label for="">First Class ($150)</label>
-                    <input class="inp-style inp-width" type="number" name="">
+                    <input id="first-input" class="inp-style inp-width" type="number" name="" value="0">
                 </div>
-                <div class="plus-minus-btn">
-                    <p>+ -</p>
+                <div >
+                <button id="first-plus" ><i class="fas fa-plus plus-minus-btn"></i></button>
+                <button id="first-minus"><i class="fas fa-minus plus-minus-btn"></i></button>
                 </div>
             </div>
                 <div class="input-group f-class">
                     <div>
                         <label for="">Economy ($100)</label>
-                        <input class="inp-style inp-width" type="number" name="">
+                        <input id="economy-input" class="inp-style inp-width" type="number" name="" value="0">
                     </div>
-                    <div class="plus-minus-btn">
-                        <p> <span>+</span> <span><i class="fas fa-minus">-</i></span> </p>
+                    <div>
+                    <button id="economy-plus" ><i class="fas fa-plus plus-minus-btn"></i></button>
+                    <button id="economy-minus" ><i class="fas fa-minus plus-minus-btn"></i></button></p>
                     </div>
                 </div>
 
@@ -86,7 +89,7 @@
                         <p>Subtotal</p>
                     </div>
                     <div class="right">
-                        <p>$500</p>
+                        <p id="subtotal-price">$0</p>
                     </div>
                 </div>
 
@@ -95,7 +98,7 @@
                         <p>Charge 10% VAT</p>
                     </div>
                     <div class="right">
-                        <p>$50</p>
+                        <p>$0</p>
                     </div>
                 </div>
                 <hr>
@@ -104,14 +107,14 @@
                         <h4>Total</h4>
                     </div>
                     <div class="right">
-                        <p>$550</p>
+                        <p>$0</p>
                     </div>
                 </div>
             </div>
             <button class="btn-style">Book Now</button>
         </div>
     </main>
-
+    <script src="script.js"></script>
     <!--Thank You-->
 </body>
 
