--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
         rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" />
     <!-- Stylesheet -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div id="booking-area" class="body">
     <!--Header and Menu Section-->
     <header class="container">
         <nav>
@@ -111,11 +113,16 @@
                     </div>
                 </div>
             </div>
-            <button class="btn-style">Book Now</button>
+            <button id="book-now" class="btn-style">Book Now</button>
         </div>
     </main>
-    <script src="script.js"></script>
-    <!--Thank You-->
+</div>
+<div id="massage-area">
+      <h2 class="fs-1">Your booking has confirmed !!</h2>
+      <h1 class="fs-1">Thank You</h1>
+  </div>
+<!--Thank You-->
+<script src="script.js"></script>
 </body>
 
 </html>
